fix ideapros contact info on smaller devices

--- a/blackwoodops-website/src/app/idea-pros/idea-pros.component.scss
+++ b/blackwoodops-website/src/app/idea-pros/idea-pros.component.scss
@@ -178,4 +178,15 @@
         flex-direction: column;
         margin: 0 0.5rem;
     }
+
+    .contact {
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+
+        p {
+            &:nth-child(2) {
+                font-size: 1.5rem;
+            }
+        }
+    }
 }
